# nova-kms

./: .gitignore  CODE_AUDIT_REPORT.md  Cargo.toml  Dockerfile  Makefile  README.md  enclaver.yaml  nova-build.yaml
contracts/: .env.example  KMSRegistry_Audit_Report.md  Makefile  README.md  audit_report_kms_registry.md  foundry.toml  remappings.txt
demo-client/: README.md  verify_client.py
demo-client-enclaver/: Dockerfile  README.md  enclaver.yaml
docs/: app-to-kms-connection.md  architecture.md  audit_report.md  cache-and-registry-model.md  code-review-2026-02-09.md  data_store_report.md  deployment.md  development.md  kms-core-workflows.md  kms-node-initialization.md  kms-node-join-workflow.md  kms-registry-deployment.md  merged_security_audit.md  nova-app-kms-access.md  scheduled_tasks.md  security-review-v2.md  security-review.md  testing.md
enclave/: Dockerfile  abi_helpers.py  app.py  auth.py  chain.py  config.py  data_store.py  errors.py  kdf.py  kms_registry.py  nova_registry.py  odyn.py  probe.py  rate_limiter.py  requirements.txt  routes.py  run_dev.sh  run_multi_node.sh  secure_channel.py  simulation.py  sync_manager.py  url_validator.py
scripts/: demo_client.py  diagnose_set_hash.py  run_dev.sh  run_multi_node.sh  simulate.sh  verify_sync.py
src/: auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  odyn.rs  rate_limiter.rs  registry.rs  server.rs  state.rs  store.rs  sync.rs
tests/: compare_behavior.py  conftest.py  test_address_normalization.py  test_app_startup.py  test_auth.py  test_chain_config.py  test_data_store.py  (+19 more)
(+24 files in other folders)
